--- a/NetDeliveryAppApplication/NetDeliveryAppAplicacao.csproj
+++ b/NetDeliveryAppApplication/NetDeliveryAppAplicacao.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetDeliveryAppData\NetDeliveryAppData.csproj" />
+    <ProjectReference Include="..\NetDeliveryAppDomain\NetDeliveryAppDominio.csproj" />
+  </ItemGroup>
+
 </Project>
