--- a/NetDeliveryAppApplication/NetDeliveryAppAplicacao.csproj
+++ b/NetDeliveryAppApplication/NetDeliveryAppAplicacao.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetDeliveryAppData\NetDeliveryAppData.csproj" />
-    <ProjectReference Include="..\NetDeliveryAppDomain\NetDeliveryAppDominio.csproj" />
   </ItemGroup>
 
 </Project>
