--- a/NetDeliveryAppWeb/package.json
+++ b/NetDeliveryAppWeb/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "jest": "^27.5.1",
     "jest-editor-support": "^30.0.2",
