--- a/NetDeliveryAppWeb/package.json
+++ b/NetDeliveryAppWeb/package.json
@@ -8,15 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.26.1",
     "core-js": "^3.6.5",
-    "jest": "^27.5.1",
+    "jest": "^28.0.1",
     "jest-editor-support": "^30.0.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-router": "^4.5.17",
     "@vue/cli-service": "~4.5.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
