--- a/NetDeliveryAppWeb/package.json
+++ b/NetDeliveryAppWeb/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
-    "jest": "^28.0.1",
+    "jest": "^28.0.3",
     "jest-editor-support": "^30.0.2",
-    "vue": "^2.6.11",
+    "jquery": "^3.6.0",
+    "vue": "^2.6.14",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
